--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+         ↓この部分を追加
+        "compile": [
+            "@php -r \"file_exists('.env') || copy('.env.heroku', '.env');\""
         ]
     }
 }
